fix: fix some bugs (#622)
* fix: remove horizontal scroll

* fix: fix value update in the component MobileNav

--- a/src/layouts/doc-layout/doc-layout.module.scss
+++ b/src/layouts/doc-layout/doc-layout.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   min-height: 100vh;
   max-width: 1600px;
-  width: 100vw;
+  width: 100%;
 }
 
 .controls {
